# CPA-Desktop

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
.history/: .gitignore_20260427102911
.trellis/: .template-hashes.json
.trellis/spec/: README.md
.trellis/spec/frontend/: index.md
.trellis/spec/rust/: cpa-desktop-runtime.md  index.md
.trellis/spec/shared/: index.md  project-overview.md  verification.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
docs/: SIGNING.md
docs/plans/: 2026-04-26-cpa-desktop.md
docs/screenshots/: README.md
docs/superpowers/plans/: 2026-04-27-cpa-desktop-hardening.md
docs/superpowers/specs/: 2026-04-27-cpa-desktop-hardening-design.md
scripts/: check-i18n.mjs  gen_icons.py  generate-assets.mjs
src/: App.test.tsx  App.tsx  constants.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: config.example.yaml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_config.rs  cpa_lifecycle.rs  cpa_manager.rs  install_detect.rs  install_source.rs  lib.rs  log_stream.rs  main.rs  panic_log.rs  tray.rs
src-tauri/src/commands/: auth_files.rs  config.rs  cpa.rs  diag.rs  install.rs  mod.rs  updater.rs
src-tauri/src/util/: mod.rs  port.rs  proc.rs  spawn.rs
src-tauri/tests/: app_config_tests.rs  cpa_lifecycle.rs
src-tauri/tests/fixtures/: mock_cpa.sh
src/components/: ConfigForm.tsx  CpaWebView.tsx  ErrorBoundary.tsx  FirstRunSetup.tsx  InstallSourceCard.tsx  LogList.tsx  MgmtUnavailableOverlay.tsx  Sidebar.tsx  StatusBar.tsx  statusbar.helpers.ts
src/components/__tests__/: CpaWebView.test.tsx  statusbar.helpers.test.ts
src/components/setup/: SetupWizard.tsx
src/components/setup/steps/: ConfigureStep.tsx  DoneStep.tsx  DownloadStep.tsx
src/components/ui/: ApiKeyList.tsx  Button.tsx  Card.tsx  Input.tsx  Modal.tsx  NumberInput.tsx  PasswordInput.tsx  Pill.tsx  Row.tsx  Section.tsx  Tabs.tsx  Toast.tsx  Toaster.tsx  Toggle.tsx  index.ts
src/components/ui/__tests__/: Button.test.tsx
src/lib/: cpaStatus.ts  i18n.ts  mgmtAutoLogin.ts  tauri.ts
src/lib/__tests__/: i18n.test.ts  mgmtAutoLogin.test.ts  mgmtAutoLoginRoundtrip.test.ts  tauri.authFiles.test.ts  utils.test.ts
src/locales/: en.ts  index.ts  zh.ts
src/pages/: About.tsx  AuthFiles.tsx  Dashboard.tsx  Logs.tsx  Settings.tsx
src/pages/__tests__/: AuthFiles.test.tsx  Dashboard.test.tsx  Logs.test.tsx  Settings.test.tsx
src/stores/: appSettings.ts  cpa.ts  logs.ts  settings.ts  toast.ts
src/stores/__tests__/: cpa.test.ts  logs.test.ts  settings.test.ts
src/test/: setup.ts
src/types/: cpa.ts
tests/: generated-assets.test.ts
