[package]
name = "cpa-desktop"
version = "0.1.0"
description = "CPA Desktop - CLIProxyAPI manager"
authors = ["CPA Desktop Contributors"]
edition = "2021"

[package.metadata.bundle]
identifier = "me.routerfor.cpa-desktop"

[lib]
name = "cpa_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "native-tls"], default-features = false }
zip = "2"
flate2 = "1"
tar = "0.4"
futures-util = "0.3"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-window-state = "2.4.1"
tauri-plugin-global-shortcut = "2.3.1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[dev-dependencies]
tempfile = "3.27.0"
